# APOLLO

./: .gitignore  LICENSE  README.md  pyproject.toml
src/apollo/: __init__.py  _core.py  optimizers.py
tests/: test_core.py  test_optimizers.py
